// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Closed 1`] = `
<div
  className={undefined}
  onMouseLeave={[Function]}
>
  <button
    className="small undefined function small() { [native code] }"
    disabled={undefined}
    onClick={[Function]}
    tabIndex={undefined}
  >
    The Dogs
  </button>
  <div
    className={undefined}
  >
    <div
      className="undefined"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
<div
  className={undefined}
  onMouseLeave={[Function]}
>
  <button
    className="small undefined function small() { [native code] }"
    disabled={true}
    onClick={[Function]}
    tabIndex={undefined}
  >
    Give me something
  </button>
  <div
    className={undefined}
  >
    <div
      className="undefined"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Icon only (disabled) 1`] = `
<div
  className={undefined}
  onMouseLeave={[Function]}
>
  <button
    className="small undefined function small() { [native code] }"
    disabled={true}
    onClick={[Function]}
    tabIndex={undefined}
  >
    <div
      style={
        Object {
          "marginRight": 0,
        }
      }
    >
      <i
        className="wg-edit"
      />
    </div>
  </button>
  <div
    className={undefined}
  >
    <div
      className="undefined"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Icon only (large) 1`] = `
<div
  className={undefined}
  onMouseLeave={[Function]}
>
  <button
    className="large undefined"
    disabled={undefined}
    onClick={[Function]}
    tabIndex={undefined}
  >
    <div
      style={
        Object {
          "marginRight": 0,
        }
      }
    >
      <i
        className="wg-edit"
      />
    </div>
  </button>
  <div
    className={undefined}
  >
    <div
      className="undefined"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Icon only 1`] = `
<div
  className={undefined}
  onMouseLeave={[Function]}
>
  <button
    className="small undefined function small() { [native code] }"
    disabled={undefined}
    onClick={[Function]}
    tabIndex={undefined}
  >
    <div
      style={
        Object {
          "marginRight": 0,
        }
      }
    >
      <i
        className="wg-edit"
      />
    </div>
  </button>
  <div
    className={undefined}
  >
    <div
      className="undefined"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Large button 1`] = `
<div
  className={undefined}
  onMouseLeave={[Function]}
>
  <button
    className="large undefined"
    disabled={undefined}
    onClick={[Function]}
    tabIndex={undefined}
  >
    Give me something
  </button>
  <div
    className={undefined}
  >
    <div
      className="undefined"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Neutral 1`] = `
<div
  className={undefined}
  onMouseLeave={[Function]}
>
  <button
    className="small undefined function small() { [native code] }"
    disabled={undefined}
    onClick={[Function]}
    tabIndex={undefined}
  >
    The Ocean
  </button>
  <div
    className={undefined}
  >
    <div
      className="undefined"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Primary 1`] = `
<div
  className={undefined}
  onMouseLeave={[Function]}
>
  <button
    className="small undefined function small() { [native code] }"
    disabled={undefined}
    onClick={[Function]}
    tabIndex={undefined}
  >
    Give me something
  </button>
  <div
    className={undefined}
  >
    <div
      className="undefined"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Primary with Icon 1`] = `
<div
  className={undefined}
  onMouseLeave={[Function]}
>
  <button
    className="small undefined function small() { [native code] }"
    disabled={undefined}
    onClick={[Function]}
    tabIndex={undefined}
  >
    <div
      style={
        Object {
          "marginRight": 10,
        }
      }
    >
      <i
        className="wg-meat"
      />
    </div>
    Give me something
  </button>
  <div
    className={undefined}
  >
    <div
      className="undefined"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Request 1`] = `
<div
  className={undefined}
  onMouseLeave={[Function]}
>
  <button
    className="small undefined function small() { [native code] }"
    disabled={undefined}
    onClick={[Function]}
    tabIndex={undefined}
  >
    The Dogs
  </button>
  <div
    className={undefined}
  >
    <div
      className="undefined"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Secondary 1`] = `
<div
  className={undefined}
  onMouseLeave={[Function]}
>
  <button
    className="small undefined function small() { [native code] }"
    disabled={undefined}
    onClick={[Function]}
    tabIndex={undefined}
  >
    The Ocean
  </button>
  <div
    className={undefined}
  >
    <div
      className="undefined"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip Default 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "width": "40px",
    }
  }
>
  <div
    className={undefined}
  >
    <div
      className=""
    >
      Hey yo
    </div>
  </div>
</div>
`;
